<resources>
    <string name="app_name">Team 1 Water Reporting</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_fragment_edit_profile">Edit Profile</string>
    <string name="title_fragment_new_water_report">New Water Report</string>
    <string name="title_fragment_new_water_quality_report">New Water Quality Report</string>
    <string name="title_fragment_list_water_reports">Water Reports</string>
    <string name="title_fragment_map">Water Report Map</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="title_activity_main_drawer">Team 1 Water Reporting</string>

    <!-- Strings related to registration -->
    <string name="prompt_register_name">Name</string>
    <string name="prompt_register_username">Username</string>
    <string name="prompt_register_password">Password</string>
    <string name="action_register">Register</string>

    <!-- Strings related to profile editing -->
    <string name="prompt_edit_profile_name">Name</string>
    <string name="prompt_edit_profile_username">Username</string>
    <string name="prompt_edit_profile_password">Password</string>
    <string name="prompt_edit_profile_email_address">Email Address</string>
    <string name="prompt_edit_profile_home_address">Home Address</string>

    <!-- Strings related to graph -->
    <string name="graph_year">Year</string>
    <string name="graph_search_radius">Search Radius (meters)</string>
    <string name="graph_virus_ppm">Graph Virus PPM</string>
    <string name="graph_contaminant_ppm">Graph Contaminant PPM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_item_edit_profile">Edit Profile</string>
    <string name="navigation_item_logout">Logout</string>

    <string name="action_save_changes">Save changes</string>

    <string name="action_settings">Settings</string>

    <string name="error_username_in_use">This username is already in use.</string>
    <string name="navigation_item_report_list">Report List</string>
    <string name="navigation_item_water_map">Water Map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="avatar">Avatar</string>
    <string name="viruses_ppm">Viruses (PPM)</string>
    <string name="contaminants_ppm">Contaminants (PPM)</string>
    <string name="save">Save</string>
    <string name="error_year_bad">Year must be greater than 0 and less than the current year.</string>
    <string name="error_year_nan">Year must be a number.</string>
    <string name="error_search_radius_nan">Search radius must be a number.</string>
    <string name="error_search_radius_lte0">Search radius must be greater than 0.</string>
    <string name="ppm">PPM</string>
    <string name="month">Month</string>
</resources>
